<resources>
    <string name="app_name">Exam</string>
    <string name="campsite_commander">Campsite Commander</string>
    <string name="add_gear">Add Gear</string>
    <string name="tent">Tent</string>
    <string name="marshmallows">Marshmallows</string>
    <string name="flashlight">Flashlight</string>
    <string name="display">DISPLAY</string>
    <string name="total_items_packed">Total Items Packed</string>
    <string name="next">Next</string>
    <string name="add_gear3">Add Gear</string>
    <string name="add_gear2">Add Gear</string>
    <string name="details">DETAILS</string>
    <string name="details2">Details</string>
</resources>